@@ -1,3 +1,6 @@
+This file contains historical changes up to release 0.2.1.
+For more recent changes see the release notes on GitHub.
+
 Refcycle changelog
 ==================
 
